# bms-firmware-BQ79600

./: CMakeLists.txt  Makefile  README.md  bms-master.ioc
BQ79600/: CMakeLists.txt  bq79600.c  bq79600.h  bq79600_bsp.c  bq79600_def.h
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
SEGGER_RTT/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
